@@ -1,47 +1,39 @@
 plugins {
-    kotlin("jvm")
-    application
-    id("com.github.johnrengelman.shadow")
-
+    kotlin("jvm") version "1.9.0"
     `maven-publish`
-    signing
-    id("io.github.gradle-nexus.publish-plugin")
 }
 
-group = "org.jire"
-version = "1.0.4"
-description = "fast simple JS5 server"
+allprojects {
+    apply(plugin = "kotlin")
+    apply(plugin = "idea")
+    apply(plugin = "org.jetbrains.kotlin.jvm")
 
-application {
-    mainClass.set("org.jire.js5server.Main")
-    applicationDefaultJvmArgs += arrayOf(
-        "-XX:-OmitStackTraceInFastThrow",
+    group = "dev.openrune"
+    version = "1.0.7"
 
-        "-Xmx8g",
-        "-Xms4g",
+    java.sourceCompatibility = JavaVersion.VERSION_11
 
-        "-XX:+UseZGC",
-        "-XX:MaxGCPauseMillis=100",
+    repositories {
+        mavenCentral()
+        maven("https://raw.githubusercontent.com/OpenRune/hosting/master")
+        maven("https://jitpack.io")
+    }
 
-        "-Dio.netty.tryReflectionSetAccessible=true", // allow Netty to use direct buffer optimizations
-    )
+    dependencies {
+        implementation(kotlin("stdlib-jdk8"))
+    }
+    plugins.withType<MavenPublishPlugin> {
+        configure<PublishingExtension> {
+            publications.withType<MavenPublication> {
+                groupId = "dev.openrune"
+                artifactId = if (project.name == "server") "js5server" else "js5-client"
+                version = version
+            }
+        }
+    }
 }
 
-dependencies {
-    val slf4jVersion = "2.0.12"
-    implementation("org.slf4j:slf4j-api:$slf4jVersion")
-    runtimeOnly("org.slf4j:slf4j-simple:$slf4jVersion")
-
-    for (module in listOf(
-        "handler",
-        "buffer",
-        "transport-native-epoll",
-        "transport-native-kqueue",
-    )) implementation("io.netty:netty-$module:4.1.107.Final")
-
-    implementation("io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.25.Final")
-
-    implementation("it.unimi.dsi:fastutil:8.5.13")
-
-    implementation("com.displee:rs-cache-library:7.1.3")
+subprojects {
+    apply(plugin = "maven-publish")
+    apply(plugin = "org.jetbrains.kotlin.jvm")
 }
